# 2fa

./: Makefile  README.md  pyproject.toml
server/authentication/: models.py  urls.py  views.py
server/authentication/migrations/: 0001_initial.py
server/authentication/templates/authentication/: index.html  login.html  qr_code.html  register.html  sign_in.html  two_factor.html
server/oauth/: models.py  serializers.py  urls.py  views.py
server/server/: settings.py  urls.py
